# turbo-transfer

./: .gitignore  pyproject.toml
src/turbo_transfer/: __init__.py  cache.py  cli.py  compression.py  fileserver.py  fuse_ops.py  link.py  protocol.py  rpc.py
tests/: test_fileserver.py  test_protocol.py  test_rpc.py
