[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-transfer"
version = "0.2.0"
description = "FUSE remote filesystem over Thunderbolt/USB-C"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "lz4>=4.0",
    "rich>=13.0",
    "refuse>=0.0.1",
    "msgpack>=1.0",
    "cachetools>=5.0",
]

[project.scripts]
turbo-transfer = "turbo_transfer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
